force-app/main/default/objects/App_Mutex_Config__mdt.object
<CustomObject>
    <description>Configuration metadata for features that use Mutex Locking</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>Indicates the number of records to be processed for each asynchronous transaction</description>
        <label>Batch Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lock_Duration__c</fullName>
        <description>If set, the scheduled nightly job will unlock the mutex record if not modified within the duration defined here.
Also make sure that if this is left blank, the job wouldn&apos;t release the mutex record</description>
        <inlineHelpText>If set, the scheduled nightly job will unlock the mutex record if not modified within the duration defined here.
Also make sure that if this is left blank, the job wouldn&apos;t release the mutex record</inlineHelpText>
        <label>Lock Duration(In Hours)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Muted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>kill switch for mutex lock implementation of this asynchronous process</description>
        <label>is Muted</label>
        <type>Checkbox</type>
    </fields>
    <label>App Mutex Config</label>
    <pluralLabel>App Mutex Configs</pluralLabel>
</CustomObject>